--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title:              "Emmet Meehan"
 description:        "A minimalist Jekyll theme"
 author_name:        "Emmet Meehan" # change this to your name
-logo_url:           https://api.github.com/users/emmetmeehan # Get it from GitHub API: https://api.github.com/users/<username>
+logo_url:           https://avatars1.githubusercontent.com/u/43195257?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
-url:                https://heiswayi.github.io # main url
+url:                https://emmetmeehan.github.io # main url
 baseurl:            /the-plain
 permalink:          /:title # Post permalink
 timezone:           America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
