--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              "Emmet Meehan"
 description:        "A minimalist Jekyll theme"
 author_name:        "Emmet Meehan" # change this to your name
-logo_url:            # Get it from GitHub API: https://api.github.com/users/<username>
+logo_url:           https://avatars0.githubusercontent.com/u/43195257?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
 url:                https://emmetmeehan.github.io # main url
