--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
 title:              "Emmet Meehan"
-description:        "A minimalist Jekyll theme"
+description:        "Emmet's writing"
 author_name:        "Emmet Meehan" # change this to your name
 logo_url:           https://avatars0.githubusercontent.com/u/43195257?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
