--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo_url:           https://avatars0.githubusercontent.com/u/43195257?v=4 # Get 
 
 # Site Settings
 url:                https://emmetmeehan.github.io # main url
-baseurl:            /the-plain
+baseurl:            /Personal-Website
 permalink:          /:title # Post permalink
 timezone:           America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
